--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <button type="button" onclick="faireHaut(-10, 0)">haut</button> 
       <button type="button" onclick="faireHaut(10, 0)">bas</button> 
       
-      <button type="button" onclick="faireBouger(0, 10)">vertical</button>
-      <button type="button" onclick="faireHaut(0, 10)">horizontal</button> 
+      <button type="button" onclick="faireBouger(0, 10)">T.Droite</button>
+      <button type="button" onclick="faireHaut(0, 10)">T.Gauche</button> 
     </div>
     <script src="main.js"></script>
   </body>
